. Add the gene ontology analysis (done)
. Mult-factor analysis (done)
Write a short report on the RNA-Seq data. (done)

.Intermediate term
. Genome annotations using the RNA-Seq data sets.
. de novo assembly using RNA-Seq (Find tools)

.Long term
. Study of evolution of bacterial gene expression 

Jobs to be finished
-------------------
NA

Histories
---------
This history can be useful later.



Wed Feb 29 09:50:15 EST 2012
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

smu21, smu86, and omz175 (or omz) are done.

How to find SMU86 (SMU109,SMU21) genes of low similarities with UA159
1. Extract DNA sequences from SMU86 contigs using GFF or GenBank files (This can
be done using some of RNASeq simulations steps).
2. BLAST the sequences against UA159 (We did some BLAST before). BLAST smu21
genes against ua159 genes, and vice versa.
3. Score sequence similarites for the sequences (Use some cutoffs to find gene
sets between SMU86 and UA159).

.I could use the following script
----
http://bioinf.uni-greifswald.de/bioinf/bioinfprakt11/ex3/orthoparahomlist.pl
----

.Command to find similar genes
----
perl pl/bioperl-get-protein.pl -in output/data/raw_data/SMU109_allcontigs.gbf -out output/data/SMU109.gff.fa
perl pl/bioperl-get-protein.pl -in output/data/raw_data/SMU21_allcontigs.gbf -out output/data/SMU21.gff.fa
perl pl/bioperl-get-protein.pl -in output/data/raw_data/SMU86_allcontigs.gbf -out output/data/SMU86.gff.fa
perl pl/bioperl-get-protein.pl -in NC_004350.gbk -out output/data/UA159.gff.fa
formatdb -i SMU109.gff.fa
formatdb -i UA159.gff.fa
perl orthoparahomlist.pl --protA=SMU109.gff.fa --protB=UA159.gff.fa \
  -E 1e-10 --ortho=ortho.lst --para=para.lst --hom=hom.lst
----

.Find genes in SMU109 not in UA159
----
formatdb -i SMU109.gff.fa
formatdb -i UA159.gff.fa
formatdb -i SMU21.gff.fa
formatdb -i SMU86.gff.fa

for i in SMU109 SMU21 SMU86; do
  perl orthoparahomlist.pl --protA=$i.gff.fa --protB=UA159.gff.fa \
    --delBlastOutput -E 1e-10 \