@@ -1384,6 +1384,58 @@
   url = {http://dx.doi.org/10.1126/science.1176951}
 }
 
+@ARTICLE{Gilbert2008,
+  author = {Jack A Gilbert and Dawn Field and Ying Huang and Rob Edwards and
+	Weizhong Li and Paul Gilna and Ian Joint},
+  title = {Detection of large numbers of novel sequences in the metatranscriptomes
+	of complex marine microbial communities.},
+  journal = {PLoS One},
+  year = {2008},
+  volume = {3},
+  pages = {e3042},
+  number = {8},
+  __markedentry = {[goshng]},
+  abstract = {Sequencing the expressed genetic information of an ecosystem (metatranscriptome)
+	can provide information about the response of organisms to varying
+	environmental conditions. Until recently, metatranscriptomics has
+	been limited to microarray technology and random cloning methodologies.
+	The application of high-throughput sequencing technology is now enabling
+	access to both known and previously unknown transcripts in natural
+	communities.We present a study of a complex marine metatranscriptome
+	obtained from random whole-community mRNA using the GS-FLX Pyrosequencing
+	technology. Eight samples, four DNA and four mRNA, were processed
+	from two time points in a controlled coastal ocean mesocosm study
+	(Bergen, Norway) involving an induced phytoplankton bloom producing
+	a total of 323,161,989 base pairs. Our study confirms the finding
+	of the first published metatranscriptomic studies of marine and soil
+	environments that metatranscriptomics targets highly expressed sequences
+	which are frequently novel. Our alternative methodology increases
+	the range of experimental options available for conducting such studies
+	and is characterized by an exceptional enrichment of mRNA (99.92\%)
+	versus ribosomal RNA. Analysis of corresponding metagenomes confirms
+	much higher levels of assembly in the metatranscriptomic samples
+	and a far higher yield of large gene families with >100 members,
+	approximately 91\% of which were novel.This study provides further
+	evidence that metatranscriptomic studies of natural microbial communities
+	are not only feasible, but when paired with metagenomic data sets,
+	offer an unprecedented opportunity to explore both structure and
+	function of microbial communities--if we can overcome the challenges
+	of elucidating the functions of so many never-seen-before gene families.},
+  doi = {10.1371/journal.pone.0003042},
+  institution = {Plymouth Marine Laboratory, Prospect Place, Plymouth, United Kingdom.
+	jagi@pml.ac.uk},
+  keywords = {Animals; DNA, Complementary, genetics; DNA, genetics; Ecosystem; Gene
+	Expression Profiling; Norway; Open Reading Frames; Plankton, genetics;
+	Polymerase Chain Reaction; RNA, Messenger, genetics; Reproducibility
+	of Results; Seawater; Water Microbiology},
+  language = {eng},
+  medline-pst = {epublish},
+  owner = {goshng},
+  pmid = {18725995},
+  timestamp = {2012.03.14},
+  url = {http://dx.doi.org/10.1371/journal.pone.0003042}
+}
+
 @ARTICLE{Gruber2010,
   author = {Andreas R Gruber and Sven Findeiß and Stefan Washietl and Ivo L Hofacker
 	and Peter F Stadler},
@@ -2831,7 +2883,6 @@
   pages = {863--864},
   number = {6},
   month = {Mar},
-  __markedentry = {[goshng]},
   abstract = {SUMMARY: Here, we present PRINSEQ for easy and rapid quality control
 	and data preprocessing of genomic and metagenomic datasets. Summary
 	statistics of FASTA (and QUAL) or FASTQ files are generated in tabular
