@@ -46,6 +46,13 @@ Histories
 This history can be useful later.
 
 
+Mon Mar  5 17:14:07 EST 2012
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+.PSIseq analysis
+----
+/Users/goshng/Documents/Projects/RNASeq-Analysis/downloads/build/PSIseq/tomato
+----
 
 Wed Feb 29 09:50:15 EST 2012
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
